新增切割內容成數份的功能

--- a/sample.ipynb
+++ b/sample.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "%run DataProcessor.ipynb\n",
-    "data_processor = DataProcessor()"
+    "dp = DataProcessor()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -25,12 +25,12 @@
    ],
    "source": [
     "# 顯示存放爬蟲後的文字json所有檔案\n",
-    "data_processor.show_files(max_results_=10) #總共N筆數"
+    "dp.show_files(max_results_=10) #總共N筆數"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -40,14 +40,14 @@
        " 'context': '近年來投資市場波動越來越明顯，追求低波動、絕對報酬的量化交易備受注目。專家表示，採用量化交易策略投資台股，不管是處於多頭或是空頭市場，績效及波動度均可領跑大盤，甚至比國內投資台股的股票型基金及 ETF 的波動率還低，表現也更為穩定。\\n大數據時代來臨，風行歐美 50 年的量化交易儼然成為顯學，台灣亦開始重視此一趨勢發展，也因此，中華機率統計學會及台北科技大學管理學院攜手主辦，並由元大期貨、摩根亞太量化交易等公司擔任協辦單位，今 (7/5) 日舉辦「時間序列與量化交易研討會」，就目前熱門的量化交易、智能投資等相關議題進行研討。\\n越來越多的基金公司重視量化交易，全球規模較大的避險基金多採行量化交易，包括橋水基金 (Bridgewater Associates)、AQR 資產管理公司、曼氏集團 (Man Group)、文藝復興科技 (Renaissance Technologies) 等全球知名避險基金。摩根亞太集團董事長張堯勇指出，避險基金規模約為 5 兆美元，採取量化交易的基金規模約 1 兆美元，比重佔了 20%，代表量化交易的操作績效好，才會有那麼高的比重。\\n\\n量化交易的操作績效不亞於價值投資及技術投資，被譽為數學天才、最賺錢的基金經理人，文藝復興對沖基金創始人詹姆斯 · 西蒙斯 (James Simons) 所管理的大獎章 (Medallion) 基金，便是典型的量化交易，績效表現優異，不僅勝過索羅斯的量子基金，也打敗了股神巴菲特的價值投資。\\n近年來台灣也逐漸重視量化交易，摩根亞太量化交易公司今年開始將量化交易引進台股投資，是國內首家推出量化交易策略的公司，初期對象鎖定法人機構，進行私募投資。張堯勇表示，數學不只是一門學科，更是一項扭轉乾坤、轉敗為勝的競爭利器，量化交易就是將數學運用在股市投資，透過複雜、精密的推理計算，打敗股市。\\n他指出，目前全球利率水平 50 位於年來新低，美國十年期公債殖利率只有 2%，日本及一些歐洲國家甚至是負利率。歷史極低利率帶導致無風險及低風險工具的投資報酬率太低（例如：銀行存款、政府公債及投資等級公司債），無法對抗通貨膨脹及支付負債，所以資產配置必須增加較高風險的投資，如股票、高收益公司債或新興市場債券，但是這些投資工具波動很大，而且很容易產生虧損！\\n他表示，長期來說，股市絕對是好的投資，報酬率也不差，但是如何選股是一門學問。目前全球 60 個主要股市交易所，總市值 70 兆美元，而台灣上市上櫃市值 35 兆台幣，面對全球及台灣最大的股市金礦，投資人應該善用「量化交易」這個超級挖礦機，以程式選股來掏金。\\n張堯勇指出，量化投資具有低波動、絕對報酬、優於大盤的三大特點，摩根亞太量化交易模擬台股近 8 年來的績效，結果顯示，運用量化交易的年化報酬率及波動度均優於台股上市櫃指數，以 2011 年金融海嘯及 2018 年中美貿易戰為例，台股上市、上櫃指數均是負報酬，不過，摩根量化交易卻是正報酬，而且波動度也比較低。\\n此外，由於台灣四大政府基金操作績效不彰，不少金融機構也面臨投資虧損問題，亦可透過量化交易提高投資報酬率。張堯勇指出，郵儲、勞退、勞保、及退撫等四大基金，總資產高達 10 兆台幣，但過去 10 年的投資報酬率不到 3%，去年虧損 120 億，面臨提早破產的風險！\\n另外台灣保險公司的總資產高達 26 兆台幣，過去賣出去的保單利率高達 4-6%，但是去年的資產報酬率卻只不到 0.4%，而且去年綜合損益虧損高達 5,000 億！金管會連下三道金牌：所有保險公司今年不準發放現金股利、部分保險公司必須儘快舉辦現金增資、以後賣的保單利率必須下降。另外台灣全體商業銀行也有高達 43 兆的總資產 43 兆，但是其資產報酬率僅只有 0.7%。\\n以上將近 80 兆台幣的資金，張堯勇指出，若將 10% 投資於股市，投資金額高達 8 兆，報酬率每增加 1%，就有 800 億元的獲利，對於台灣的國家財政或金融機構的獲利，都有非常巨大的助益。\\n'}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import json\n",
-    "content = data_processor.get_blob('data/YUSUN.zip/YUSUN/textFiles/0.txt')\n",
+    "content = dp.get_blob('data/YUSUN.zip/YUSUN/textFiles/0.txt')\n",
     "#讀取JSON使用\n",
     "d = json.loads(content)\n",
     "d\n",
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -72,12 +72,12 @@
     "# source_file_name: 上傳檔案名稱\n",
     "# destination_file_name: 存放 .data/ 檔案名稱\n",
     "# 上傳檔案會放置 gs://tbrain-tsmc/data\n",
-    "data_processor.upload_blob(source_file_name='./assert/tbrain_train_final_0610.csv', destination_file_name='tbrain_train_final_0610.csv')"
+    "dp.upload_blob(source_file_name='./assert/tbrain_train_final_0610.csv', destination_file_name='tbrain_train_final_0610.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -91,12 +91,12 @@
    "source": [
     "# source_file_name: 刪除檔案名稱\n",
     "# 刪除此目錄檔案 gs://tbrain-tsmc/data\n",
-    "data_processor.delete_file(source_file_name='./assert/tbrain_train_final_0610.csv')"
+    "dp.delete_file(source_file_name='./assert/tbrain_train_final_0610.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -108,23 +108,23 @@
     }
    ],
    "source": [
-    "data_processor.delete_file(source_file_name='tbrain_train_final_0610.csv')"
+    "dp.delete_file(source_file_name='tbrain_train_final_0610.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 整合所有的json file \n",
     "# 整合對應 gs://tbrain-tsmc/data/YUSUN.zip/YUSUN/textFiles/\n",
-    "# data_processor.combine_all_file()"
+    "# dp.combine_all_file()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
        "5023"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,13 +141,13 @@
    "source": [
     "# 資料前後資料夾 gs://tbrain-tsmc/training_data/\n",
     "# 得所有內文: 訓練文本可透過此method取\n",
-    "contexts = data_processor.get_all_context('training_data/tbrain_train_title_context.txt')\n",
+    "contexts = dp.get_all_context('training_data/tbrain_train_title_context.txt')\n",
     "len(contexts)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -156,24 +156,20 @@
        "'近年來投資市場波動越來越明顯，追求低波動、絕對報酬的量化交易備受注目。專家表示，採用量化交易策略投資台股，不管是處於多頭或是空頭市場，績效及波動度均可領跑大盤，甚至比國內投資台股的股票型基金及 ETF 的波動率還低，表現也更為穩定。大數據時代來臨，風行歐美 50 年的量化交易儼然成為顯學，台灣亦開始重視此一趨勢發展，也因此，中華機率統計學會及台北科技大學管理學院攜手主辦，並由元大期貨、摩根亞太量化交易等公司擔任協辦單位，今 (7/5) 日舉辦「時間序列與量化交易研討會」，就目前熱門的量化交易、智能投資等相關議題進行研討。越來越多的基金公司重視量化交易，全球規模較大的避險基金多採行量化交易，包括橋水基金 (Bridgewater Associates)、AQR 資產管理公司、曼氏集團 (Man Group)、文藝復興科技 (Renaissance Technologies) 等全球知名避險基金。摩根亞太集團董事長張堯勇指出，避險基金規模約為 5 兆美元，採取量化交易的基金規模約 1 兆美元，比重佔了 20%，代表量化交易的操作績效好，才會有那麼高的比重。量化交易的操作績效不亞於價值投資及技術投資，被譽為數學天才、最賺錢的基金經理人，文藝復興對沖基金創始人詹姆斯 · 西蒙斯 (James Simons) 所管理的大獎章 (Medallion) 基金，便是典型的量化交易，績效表現優異，不僅勝過索羅斯的量子基金，也打敗了股神巴菲特的價值投資。近年來台灣也逐漸重視量化交易，摩根亞太量化交易公司今年開始將量化交易引進台股投資，是國內首家推出量化交易策略的公司，初期對象鎖定法人機構，進行私募投資。張堯勇表示，數學不只是一門學科，更是一項扭轉乾坤、轉敗為勝的競爭利器，量化交易就是將數學運用在股市投資，透過複雜、精密的推理計算，打敗股市。他指出，目前全球利率水平 50 位於年來新低，美國十年期公債殖利率只有 2%，日本及一些歐洲國家甚至是負利率。歷史極低利率帶導致無風險及低風險工具的投資報酬率太低（例如：銀行存款、政府公債及投資等級公司債），無法對抗通貨膨脹及支付負債，所以資產配置必須增加較高風險的投資，如股票、高收益公司債或新興市場債券，但是這些投資工具波動很大，而且很容易產生虧損！他表示，長期來說，股市絕對是好的投資，報酬率也不差，但是如何選股是一門學問。目前全球 60 個主要股市交易所，總市值 70 兆美元，而台灣上市上櫃市值 35 兆台幣，面對全球及台灣最大的股市金礦，投資人應該善用「量化交易」這個超級挖礦機，以程式選股來掏金。張堯勇指出，量化投資具有低波動、絕對報酬、優於大盤的三大特點，摩根亞太量化交易模擬台股近 8 年來的績效，結果顯示，運用量化交易的年化報酬率及波動度均優於台股上市櫃指數，以 2011 年金融海嘯及 2018 年中美貿易戰為例，台股上市、上櫃指數均是負報酬，不過，摩根量化交易卻是正報酬，而且波動度也比較低。此外，由於台灣四大政府基金操作績效不彰，不少金融機構也面臨投資虧損問題，亦可透過量化交易提高投資報酬率。張堯勇指出，郵儲、勞退、勞保、及退撫等四大基金，總資產高達 10 兆台幣，但過去 10 年的投資報酬率不到 3%，去年虧損 120 億，面臨提早破產的風險！另外台灣保險公司的總資產高達 26 兆台幣，過去賣出去的保單利率高達 4-6%，但是去年的資產報酬率卻只不到 0.4%，而且去年綜合損益虧損高達 5,000 億！金管會連下三道金牌：所有保險公司今年不準發放現金股利、部分保險公司必須儘快舉辦現金增資、以後賣的保單利率必須下降。另外台灣全體商業銀行也有高達 43 兆的總資產 43 兆，但是其資產報酬率僅只有 0.7%。以上將近 80 兆台幣的資金，張堯勇指出，若將 10% 投資於股市，投資金額高達 8 兆，報酬率每增加 1%，就有 800 億元的獲利，對於台灣的國家財政或金融機構的獲利，都有非常巨大的助益。'"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "contexts = [data_processor.preprocessing(context) for context in contexts]\n",
+    "contexts = [dp.preprocessing(context) for context in contexts]\n",
     "contexts[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -181,7 +177,7 @@
        "'量化交易追求絕對報酬 有效對抗牛熊市'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,13 +185,13 @@
    "source": [
     "# 資料前後資料夾 gs://tbrain-tsmc/training_data/\n",
     "# 取得所有標題\n",
-    "title = data_processor.get_all_title('training_data/tbrain_train_title_context.txt')\n",
+    "title = dp.get_all_title('training_data/tbrain_train_title_context.txt')\n",
     "title[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +200,7 @@
        "\"['周麗真', '張志偉', '陳逢璿']\""
       ]
      },
-     "execution_count": 25,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,13 +208,13 @@
    "source": [
     "# 資料前後資料夾 gs://tbrain-tsmc/training_data/\n",
     "# 取得所有標題\n",
-    "name = data_processor.get_all_name('training_data/tbrain_train_title_context.txt')\n",
+    "name = dp.get_all_name('training_data/tbrain_train_title_context.txt')\n",
     "name[14]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +223,7 @@
        "'近年來投資市場波動越來越明顯，追求低波動、絕對報酬的量化交易備受注目。專家表示，採用量化交易策略投資台股，不管是處於多頭或是空頭市場，績效及波動度均可領跑大盤，甚至比國內投資台股的股票型基金及 ETF 的波動率還低，表現也更為穩定。大數據時代來臨，風行歐美 50 年的量化交易儼然成為顯學，台灣亦開始重視此一趨勢發展，也因此，中華機率統計學會及台北科技大學管理學院攜手主辦，並由元大期貨、摩根亞太量化交易等公司擔任協辦單位，今 (7/5) 日舉辦「時間序列與量化交易研討會」，就目前熱門的量化交易、智能投資等相關議題進行研討。越來越多的基金公司重視量化交易，全球規模較大的避險基金多採行量化交易，包括橋水基金 (Bridgewater Associates)、AQR 資產管理公司、曼氏集團 (Man Group)、文藝復興科技 (Renaissance Technologies) 等全球知名避險基金。摩根亞太集團董事長張堯勇指出，避險基金規模約為 5 兆美元，採取量化交易的基金規模約 1 兆美元，比重佔了 20%，代表量化交易的操作績效好，才會有那麼高的比重。量化交易的操作績效不亞於價值投資及技術投資，被譽為數學天才、最賺錢的基金經理人，文藝復興對沖基金創始人詹姆斯 · 西蒙斯 (James Simons) 所管理的大獎章 (Medallion) 基金，便是典型的量化交易，績效表現優異，不僅勝過索羅斯的量子基金，也打敗了股神巴菲特的價值投資。近年來台灣也逐漸重視量化交易，摩根亞太量化交易公司今年開始將量化交易引進台股投資，是國內首家推出量化交易策略的公司，初期對象鎖定法人機構，進行私募投資。張堯勇表示，數學不只是一門學科，更是一項扭轉乾坤、轉敗為勝的競爭利器，量化交易就是將數學運用在股市投資，透過複雜、精密的推理計算，打敗股市。他指出，目前全球利率水平 50 位於年來新低，美國十年期公債殖利率只有 2%，日本及一些歐洲國家甚至是負利率。歷史極低利率帶導致無風險及低風險工具的投資報酬率太低（例如：銀行存款、政府公債及投資等級公司債），無法對抗通貨膨脹及支付負債，所以資產配置必須增加較高風險的投資，如股票、高收益公司債或新興市場債券，但是這些投資工具波動很大，而且很容易產生虧損！他表示，長期來說，股市絕對是好的投資，報酬率也不差，但是如何選股是一門學問。目前全球 60 個主要股市交易所，總市值 70 兆美元，而台灣上市上櫃市值 35 兆台幣，面對全球及台灣最大的股市金礦，投資人應該善用「量化交易」這個超級挖礦機，以程式選股來掏金。張堯勇指出，量化投資具有低波動、絕對報酬、優於大盤的三大特點，摩根亞太量化交易模擬台股近 8 年來的績效，結果顯示，運用量化交易的年化報酬率及波動度均優於台股上市櫃指數，以 2011 年金融海嘯及 2018 年中美貿易戰為例，台股上市、上櫃指數均是負報酬，不過，摩根量化交易卻是正報酬，而且波動度也比較低。此外，由於台灣四大政府基金操作績效不彰，不少金融機構也面臨投資虧損問題，亦可透過量化交易提高投資報酬率。張堯勇指出，郵儲、勞退、勞保、及退撫等四大基金，總資產高達 10 兆台幣，但過去 10 年的投資報酬率不到 3%，去年虧損 120 億，面臨提早破產的風險！另外台灣保險公司的總資產高達 26 兆台幣，過去賣出去的保單利率高達 4-6%，但是去年的資產報酬率卻只不到 0.4%，而且去年綜合損益虧損高達 5,000 億！金管會連下三道金牌：所有保險公司今年不準發放現金股利、部分保險公司必須儘快舉辦現金增資、以後賣的保單利率必須下降。另外台灣全體商業銀行也有高達 43 兆的總資產 43 兆，但是其資產報酬率僅只有 0.7%。以上將近 80 兆台幣的資金，張堯勇指出，若將 10% 投資於股市，投資金額高達 8 兆，報酬率每增加 1%，就有 800 億元的獲利，對於台灣的國家財政或金融機構的獲利，都有非常巨大的助益。'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,13 +231,13 @@
    "source": [
     "# 資料前後資料夾 gs://tbrain-tsmc/training_data/\n",
     "# 取得所有資料\n",
-    "titles, names, contexts = data_processor.get_all('training_data/tbrain_train_title_context.txt')\n",
+    "titles, names, contexts = dp.get_all('training_data/tbrain_train_title_context.txt')\n",
     "contexts[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -255,14 +251,14 @@
     }
    ],
    "source": [
-    "titles, names, contexts = data_processor.get_all('training_data/tbrain_train_title_context.txt', False)\n",
+    "titles, names, contexts = dp.get_all('training_data/tbrain_train_title_context.txt', False)\n",
     "print(titles[19])\n",
     "print(contexts[19])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -275,14 +271,14 @@
     }
    ],
    "source": [
-    "titles, names, contexts = data_processor.get_all('training_data/tbrain_train_title_context.txt', True)\n",
+    "titles, names, contexts = dp.get_all('training_data/tbrain_train_title_context.txt', True)\n",
     "print(titles[19])\n",
     "print(contexts[19])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,6 +293,192 @@
     "        f.write('\\n')\n",
     "        f.write('---')\n",
     "        f.write('\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import *\n",
+    "import ast\n",
+    "\n",
+    "tokenizer = BertTokenizer.from_pretrained('bert-base-chinese')\n",
+    "titles, names, contexts = dp.get_all('training_data/tbrain_train_title_context.txt')\n",
+    "\n",
+    "max_len = 512\n",
+    "\n",
+    "contents_slice = []\n",
+    "roles_slice = []\n",
+    "\n",
+    "for i in range(len(contexts)):\n",
+    "    content = titles[i] + contexts[i]\n",
+    "    content_token = tokenizer.tokenize(content)\n",
+    "    \n",
+    "    part = len(content_token)//max_len\n",
+    "    j = 0\n",
+    "    while j < part:\n",
+    "        roles_slice.append(names[i])\n",
+    "        contents_slice.append(''.join(content_token[max_len*j: max_len*(j+1)]))\n",
+    "        j += 1\n",
+    "    \n",
+    "    roles_slice.append(names[i])\n",
+    "    contents_slice.append(''.join(content_token[max_len*j:]))\n",
+    "    \n",
+    "print(len(contexts))\n",
+    "print(len(contents_slice))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9648"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(roles_slice)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Content</th>\n",
+       "      <th>Role</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>量化交易追求絕對報酬有效對抗牛熊市近年來投資市場波動越來越明顯，追求低波動、絕對報酬的量化交...</td>\n",
+       "      <td>[]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>易，績效表現優異，不僅勝過索羅斯的量子基金，也打敗了股神巴菲特的價值投資。近年來台灣也逐漸重...</td>\n",
+       "      <td>[]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>交易模擬台股近8年來的績效，結果顯示，運用量化交易的年化報酬率及波動度均優於台股上市櫃指數，...</td>\n",
+       "      <td>[]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>外送員死亡未通報北市勞動局開罰[UNK][UNK]30萬10月13日晚間發生[UNK][UN...</td>\n",
+       "      <td>[]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>重影響公共秩序，受責難程度高，依行政罰法、職業安全衛生法裁處罰鍰30萬元。勞動局職安科表示，...</td>\n",
+       "      <td>[]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9643</th>\n",
+       "      <td>【華冠投顧】[UNK]轉強小樹走高[UNK]持續向上推進，今天的好消息是，最快在兩週內，美方...</td>\n",
+       "      <td>[]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9644</th>\n",
+       "      <td></td>\n",
+       "      <td>[]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9645</th>\n",
+       "      <td>雙子星案法律戰南海團隊敗陣中大特史上金額最大開發案「台北雙子星」最優申請人「南海團隊」香港商...</td>\n",
+       "      <td>[]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9646</th>\n",
+       "      <td>由次優申請人遞補的危險，繫於相對人北市府和北市捷運局對投審會駁回投資申請決定，是否可歸責於南...</td>\n",
+       "      <td>[]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9647</th>\n",
+       "      <td>影/今年上半年三大股票期貨交易策略最賺錢全球投資市場操作難度升高，群益期貨副總經理黃維本建議...</td>\n",
+       "      <td>[]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>9648 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                Content Role\n",
+       "0     量化交易追求絕對報酬有效對抗牛熊市近年來投資市場波動越來越明顯，追求低波動、絕對報酬的量化交...   []\n",
+       "1     易，績效表現優異，不僅勝過索羅斯的量子基金，也打敗了股神巴菲特的價值投資。近年來台灣也逐漸重...   []\n",
+       "2     交易模擬台股近8年來的績效，結果顯示，運用量化交易的年化報酬率及波動度均優於台股上市櫃指數，...   []\n",
+       "3     外送員死亡未通報北市勞動局開罰[UNK][UNK]30萬10月13日晚間發生[UNK][UN...   []\n",
+       "4     重影響公共秩序，受責難程度高，依行政罰法、職業安全衛生法裁處罰鍰30萬元。勞動局職安科表示，...   []\n",
+       "...                                                 ...  ...\n",
+       "9643  【華冠投顧】[UNK]轉強小樹走高[UNK]持續向上推進，今天的好消息是，最快在兩週內，美方...   []\n",
+       "9644                                                      []\n",
+       "9645  雙子星案法律戰南海團隊敗陣中大特史上金額最大開發案「台北雙子星」最優申請人「南海團隊」香港商...   []\n",
+       "9646  由次優申請人遞補的危險，繫於相對人北市府和北市捷運局對投審會駁回投資申請決定，是否可歸責於南...   []\n",
+       "9647  影/今年上半年三大股票期貨交易策略最賺錢全球投資市場操作難度升高，群益期貨副總經理黃維本建議...   []\n",
+       "\n",
+       "[9648 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np \n",
+    "import pandas as pd\n",
+    "\n",
+    "d = np.column_stack((contents_slice, roles_slice))\n",
+    "df = pd.DataFrame(data=d, columns=[\"Content\", \"Role\"])\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('./train_slice.csv', index=False)"
    ]
   }
  ],
