--- a/model.ipynb
+++ b/model.ipynb
@@ -2,14 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Copying gs://tbrain-tsmc/training_data/Model_BIO/Model_BIO/config.json...\n",
+      "Copying gs://tbrain-tsmc/training_data/Model_BIO/Model_BIO/tf_model.h5...\n",
+      "Copying gs://tbrain-tsmc/training_data/Model_BIO/tf_model.h5...\n",
+      "Copying gs://tbrain-tsmc/training_data/Model_BIO/config.json...\n",
+      "| [4/4 files][780.8 MiB/780.8 MiB] 100% Done  12.3 MiB/s ETA 00:00:00           \n",
+      "Operation completed over 4 objects/780.8 MiB.                                    \n"
+     ]
+    }
+   ],
    "source": [
     "# 環境 tf2.0\n",
     "\n",
     "# 此可忽略\n",
-    "# !git clone https://alex00252141:good12258@github.com/alex00252141/T-brain.git\n",
+    "# !git clone https://[帳號]:[密碼]@github.com/alex00252141/T-brain.git\n",
     "# !gsutil -m cp -R gs://tbrain-tsmc/training_data/chinese_L-12_H-768_A-12 .\n",
     "\n",
     "# 重要!! 請安裝以下資料\n",
@@ -47,24 +60,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "處長喝花酒不算貪污？ 二審逆轉重判10年2月前茂管處長許正雄涉索取回扣案，被高雄高分院改判有罪。（記者鮑建信攝）〔記者鮑建信／高雄報導〕交通部觀光局茂林國家風景區管理處前處長許正雄被控收回扣案，地院調查喝花酒沒有對價關係，又查無貪污證據，並指廠商為脫罪而認罪協商，判決無罪，案經高雄高分院審理後，下午大逆轉改判有罪，許處有期徒刑10年2月、副處長楊國聰處則維持無罪判決。檢方指出，2011年間起，當時茂林風管處長的許正雄向承攬「六龜區及賽嘉樂園遊憩服務設施工程」委託設計監造劉姓建築師，索討決標金369萬的5％回扣，許前後共涉嫌索賄81萬元。此外，吳姓、林姓包商以1587萬元承攬「六龜遊客中心舊址遊憩服務設施整建工程」後，涉嫌設宴招待許和副處長楊國聰後，又轉往「香格里拉」酒店喝花酒，案經檢方偵結，劉、吳、林3人緩起訴處分，許、楊被依貪瀆罪起訴。高雄地院調查，劉、吳、林等人的認罪證詞，積極事證有待商榷；至於招待官員喝花酒的請客文化存在已久，雖有悖公務員守份自持官箴，但業者為期建立「特別私交」招待的飲宴行為，非等同貪污治罪條例所處罰的職務上行為，如果無法證明官商間有對價關係，充其量只是違反公務員行政倫理範疇，認定罪證不足。不過，二審合議庭則採信劉證詞，認定劉和許共見面5次，每次見面後，劉就去領錢，共行賄許25萬元，因此改判有罪，可上訴。☆飲酒過量  有害健康  禁止酒駕☆\n",
-      "['許正雄']\n",
-      "正 雄 正 雄 正 雄\n",
-      "國\n",
-      "\n",
+      "1.8454856872558594\n",
       "[]\n"
      ]
     }
    ],
    "source": [
     "import numpy as np \n",
+    "import time\n",
     "\n",
     "def extract_name(text, label):\n",
     "    l_label = np.argmax(label, -1)[0]\n",
@@ -91,10 +101,9 @@
     "tid =  165 #72 139 150(空)\n",
     "titles, names, contexts = dp.get_all()\n",
     "test_string = titles[tid] + contexts[tid]\n",
-    "print(test_string)\n",
-    "print(names[tid])\n",
     "###\n",
     "\n",
+    "start = time.time()\n",
     "MAX_LEN = 256\n",
     "part = len(test_string) // MAX_LEN\n",
     "i = 0\n",
@@ -112,7 +121,7 @@
     "    outputs = model(inputs)\n",
     "    loss, scores = outputs[:2]\n",
     "    \n",
-    "    print(tokenizer.decode(input_ids.numpy()[np.argmax(scores, -1)>0]))\n",
+    "#     print(tokenizer.decode(input_ids.numpy()[np.argmax(scores, -1)>0]))\n",
     "    answers.update(extract_name(input_ids[0], scores))\n",
     "\n",
     "    i += 1\n",
