新增測試API的程式

--- a/Flask API_tf2.ipynb
+++ b/Flask API_tf2.ipynb
@@ -49,7 +49,7 @@
     "        name = tokenizer.decode([text.numpy()[i]])\n",
     "\n",
     "        if i in np.where(l_label==2)[0].tolist():\n",
-    "            if answer != \"\":\n",
+    "            if answer != \"\" and len(answer) > 1:\n",
     "                answers.add(answer)\n",
     "                \n",
     "            answer = name\n",
@@ -85,15 +85,15 @@
     "    @returns prediction (list): a list of name\n",
     "    \"\"\"\n",
     "    MAX_LEN = 256\n",
-    "    part = len(test_string) // MAX_LEN\n",
+    "    part = len(article) // MAX_LEN\n",
     "    i = 0\n",
     "    answers = set()\n",
     "\n",
     "    while i <= part:\n",
     "        if i == part:\n",
-    "            inputs = tokenizer(test_string[i*MAX_LEN: ], return_tensors=\"tf\")\n",
+    "            inputs = tokenizer(article[i*MAX_LEN: ], return_tensors=\"tf\")\n",
     "        else:\n",
-    "            inputs = tokenizer(test_string[i*MAX_LEN: (i+1)*MAX_LEN], return_tensors=\"tf\")\n",
+    "            inputs = tokenizer(article[i*MAX_LEN: (i+1)*MAX_LEN], return_tensors=\"tf\")\n",
     "\n",
     "        input_ids = inputs[\"input_ids\"]\n",
     "        inputs[\"labels\"] = tf.reshape(tf.constant([1] * tf.size(input_ids).numpy()), (-1, tf.size(input_ids))) # Batch size 1\n",
@@ -102,6 +102,7 @@
     "        answers.update(extract_name(input_ids[0], scores))\n",
     "\n",
     "        i += 1\n",
+    "        \n",
     "    prediction = _check_datatype_to_list(list(answers))\n",
     "    \n",
     "    return prediction\n",
