新增預訓練模型連結

--- a/Flask API_tf2.ipynb
+++ b/Flask API_tf2.ipynb
@@ -10,7 +10,10 @@
     "# !git clone https://github.com/huggingface/transformers\n",
     "# !cd transformers\n",
     "# !pip install ./transformers/.\n",
-    "# !gsutil -m cp -R gs://tbrain-tsmc/training_data/Model_BIO . #此落無法透過指令安裝 可從gs上面下載 gs://tbrain-tsmc/training_data/Model_BIO"
+    "# !gsutil -m cp -R gs://tbrain-tsmc/Model_BIO . #此落無法透過指令安裝 可從gs上面下載 gs://tbrain-tsmc/training_data/Model_BIO\n",
+    "\n",
+    "# config.json: https://storage.googleapis.com/tbrain-tsmc/Model_BIO/config.json\n",
+    "# https://storage.googleapis.com/tbrain-tsmc/Model_BIO/tf_model.h5"
    ]
   },
   {
