修正預測文字錯誤問題

--- a/model.ipynb
+++ b/model.ipynb
@@ -2,22 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Copying gs://tbrain-tsmc/training_data/Model_BIO/Model_BIO/config.json...\n",
-      "Copying gs://tbrain-tsmc/training_data/Model_BIO/Model_BIO/tf_model.h5...\n",
-      "Copying gs://tbrain-tsmc/training_data/Model_BIO/tf_model.h5...\n",
-      "Copying gs://tbrain-tsmc/training_data/Model_BIO/config.json...\n",
-      "| [4/4 files][780.8 MiB/780.8 MiB] 100% Done  12.3 MiB/s ETA 00:00:00           \n",
-      "Operation completed over 4 objects/780.8 MiB.                                    \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 環境 tf2.0\n",
     "\n",
@@ -29,12 +16,14 @@
     "# !git clone https://github.com/huggingface/transformers\n",
     "# !cd transformers\n",
     "# !pip install ./transformers/.\n",
-    "# !gsutil -m cp -R gs://tbrain-tsmc/training_data/Model_BIO . #此落無法透過指令安裝 可從gs上面下載 gs://tbrain-tsmc/training_data/Model_BIO"
+    "# !gsutil -m cp -R gs://tbrain-tsmc/training_data/Model_BIO . #此落無法透過指令安裝 可從gs上面下載 gs://tbrain-tsmc/training_data/Model_BIO\n",
+    "# !gsutil -m cp -R gs://tbrain-tsmc/Model_BIO_2 . \n",
+    "# !gsutil -m cp -R ./day2.xlsx gs://tbrain-tsmc/training_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +33,7 @@
       "Some weights of the model checkpoint at Model_BIO were not used when initializing TFBertForTokenClassification: ['dropout_417']\n",
       "- This IS expected if you are initializing TFBertForTokenClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPretraining model).\n",
       "- This IS NOT expected if you are initializing TFBertForTokenClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
-      "Some weights of TFBertForTokenClassification were not initialized from the model checkpoint at Model_BIO and are newly initialized: ['dropout_37']\n",
+      "Some weights of TFBertForTokenClassification were not initialized from the model checkpoint at Model_BIO and are newly initialized: ['dropout_75']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
      ]
     }
@@ -60,14 +49,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['許正雄', '楊國聰']\n"
+      "修正前\n",
+      "[]\n",
+      "修正後\n",
+      "[]\n"
      ]
     }
    ],
@@ -76,37 +68,65 @@
     "import time\n",
     "\n",
     "def extract_name(text, label):\n",
-    "    l_label = np.argmax(label, -1)[0]\n",
-    "    \n",
     "    answers = set()\n",
     "    answer = ''\n",
     "    \n",
-    "    for i in np.where(l_label>0)[0].tolist():\n",
-    "        name = tokenizer.decode([text.numpy()[i]])\n",
+    "    for i in np.where(label>0)[0].tolist():\n",
+    "        name = tokenizer.decode([text[i]])\n",
     "\n",
-    "        if i in np.where(l_label==2)[0].tolist():\n",
+    "        if i in np.where(label==2)[0].tolist():\n",
     "            if answer != \"\":\n",
     "                answers.add(answer)\n",
-    "                \n",
+    "            \n",
     "            answer = name\n",
     "        else:\n",
     "            answer += name\n",
     "\n",
     "    return answers\n",
     "\n",
-    "###  這邊改成輸入的字串 test_string = ?\n",
-    "%run DataProcessor.ipynb\n",
-    "dp = DataProcessor()\n",
-    "tid =  165 #72 139 150(空)\n",
-    "titles, names, contexts = dp.get_all()\n",
-    "test_string = titles[tid] + contexts[tid]\n",
-    "###\n",
+    "def extract_name_plus(text, label):\n",
+    "    answers = set()\n",
+    "    answer = ''\n",
+    "    \n",
+    "    for i in range(len(label)):\n",
+    "        indx_lastname = 0\n",
+    "        \n",
+    "        if label[i] == 2:\n",
+    "            answer ='' \n",
+    "            answer = tokenizer.decode([text[i]])\n",
+    "            i += 1\n",
+    "            \n",
+    "            while label[i]!=0:\n",
+    "                answer += tokenizer.decode([text[i]])\n",
+    "                \n",
+    "                if label[i]==2:\n",
+    "                    break\n",
+    "                \n",
+    "                i += 1          \n",
+    "    \n",
+    "        if len(answer)> 2 :\n",
+    "            answers.add(answer)\n",
+    "        \n",
+    "        i+=1\n",
     "\n",
+    "    return answers\n",
+    "\n",
+    "###  這邊改成輸入的字串 test_string = ?\n",
+    "# %run DataProcessor.ipynb\n",
+    "# dp = DataProcessor()\n",
+    "# tid =  165 #72 139 150(空)\n",
+    "# titles, names, contexts = dp.get_all()\n",
+    "tid =  118\n",
+    "test_string  = df['News'][tid]\n",
     "start = time.time()\n",
-    "MAX_LEN = 256\n",
+    "####\n",
+    "\n",
+    "MAX_LEN = 512\n",
     "part = len(test_string) // MAX_LEN\n",
     "i = 0\n",
     "answers = set()\n",
+    "all_text = np.array([])\n",
+    "all_label = np.array([])\n",
     "\n",
     "while i <= part:\n",
     "    if i == part:\n",
@@ -119,14 +139,49 @@
     "\n",
     "    outputs = model(inputs)\n",
     "    loss, scores = outputs[:2]\n",
-    "    \n",
-    "#     print(tokenizer.decode(input_ids.numpy()[np.argmax(scores, -1)>0]))\n",
-    "    answers.update(extract_name(input_ids[0], scores))\n",
+    "\n",
+    "    all_text = np.append(all_text, input_ids[0].numpy())\n",
+    "    all_label = np.append(all_label, np.argmax(scores, -1)[0])\n",
     "\n",
     "    i += 1\n",
     "\n",
-    "### 最終結果\n",
+    "answers.update(extract_name_plus(all_text, all_label))\n",
+    "\n",
+    "### 最終結果 ###\n",
     "print(list(answers))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "0:00:04.178288@@tim@@2019.12.31 02:55【頭家開講】小螺絲入口鑽出金鴻君集團董事長李碧青文｜張毓迪攝影｜陳政其林儒勇繪圖｜林子芸螺絲模具工出身的李碧青，靠精良加工技術帶領團隊轉型，切入植牙領域，是國內第一家全製程人工牙材製造商。模具工出身的李碧青，靠技術與服務，成為全台前3大螺絲螺帽模具廠。古道熱腸的他常聯手同業爭取訂單，不僅在模具界沒敵人，還累積隔行創業能量與人脈。2005年因一場演講，和北醫教授合作，開啟轉型契機。為惡補臨床專業，他拜牙醫為師熬夜上課，獲植牙權威贈送手繪草圖，4年燒2億元研發費，做出全台第一根全製程人工牙根。國內市場長期被歐美、韓國品牌盤據，他研發專利塗層，可縮短治療時間，價格便宜5成，提供醫病更多元選擇。上午8點，國內人工牙根龍頭鴻君科技員工排隊等電梯，董事長李碧青卻連一分鐘都不願枯等，三步併作二步爬樓梯上3樓辦公室。「工作就是我的最大興趣，創業29年來，就算前一晚喝醉、生病，隔天照樣準時進公司。」急性子的他，早上7點先巡模具廠，接著坐鎮牙材廠，2間公司都用他的名字命名，透露「只許成功不許失敗」的決心。李碧青小檔案<BR>出生：1960年（60歲）<BR>家庭：已婚，育有2子<BR>現職：鴻君集團董事長<BR>學歷：高雄應用科技大學企管、模具雙碩士，高雄應用科技大學工管博士<BR>重要經歷：螺絲廠品檢員、課長<BR>休閒：種水果<BR>座右銘：學海無涯<BR>經營心法：精打細算快狠準產學合作成牙根龍頭故鄉高雄岡山是台灣螺絲螺帽的生產重鎮，高雄工專（現為高雄應用科技大學）模具科畢業後，李碧青投入螺絲螺帽模具製造，靠技術品質，5年內拚成領頭羊，30名員工年產值9,000萬元，是全台排行前三大的螺絲螺帽模具廠。「模具價格若有起伏變動，都是我在訂牌價，但我從不搞削價競爭，也不耍小手段，一切靠品質取勝。」李碧青說。人工牙根（左）是以醫療級鈦金屬製成，透過手術植入齒槽骨，待骨整合後再安裝牙冠（右），滿足患者咀嚼及美觀需求。（右圖翻攝鴻君科技官網）「這行很多人從學徒拚到師傅，產品做得很漂亮，但不會賣，都會來找我幫忙。」學生時代就擔任學生會會長、班代表的李碧青，會聯手同業爭取訂單，還派妻子林星延協助同行設外銷部門，不僅在模具界沒有敵人，還累積隔行創業能量與人脈。2005年他回母校進修，聆聽北醫口腔醫學院院長歐耿良「人工牙根演變史和趨勢發展」演講，會後歐耿良提起產學合作，「同學們都推舉我，說跟我合作一定會成功，沒想到教授隔天真的跑來找我，他的熱忱打動我，也願意協助我規劃，就來做吧！」乍看之下，人工牙根與螺絲外型相似，傳統螺絲1公斤賣不到1,000元，但人工牙根一根動輒萬元起跳，勾起李碧青的挑戰欲。和北醫技術合作，讓李碧青奪得先機，成為國內第一家全製程人工牙材製造商，5年前在路竹科學園區打造全亞洲最大生產廠，產品行銷東歐、東南亞、日本等10國，1年賣出5萬根，國內市占率約10％，是國產牙根龍頭，3年前又切入骨材，去年醫材合計營收突破1.6億元，二大事業體今年營收達2.5億元。為了更了解牙醫師需求，李碧青（右）曾到牙醫診所當學徒，產品問市後也不吝聽取牙醫師建議修改精進，盼獲得更大認同與信任。拚搏豪爽貴人運不斷身為長子的李碧青，之所以這麼拚，全是為了脫貧。因父母長年務農，他兒時放學第一要事是割草給牛吃，「有時在路上遇到同學，看我牽著牛，他們覺得很好玩，我卻很自卑。」岡山有不少眷村子弟，軍公教家庭生活條件較好，李碧青最羨慕同學有家人送來現做便當。他15歲就到螺絲廠打工，有次遇颱風水淹一層樓高，不會游泳的他勉強涉水走回家，險遭滅頂。鴻君科技廠以全自動化生產人工牙根，機台使用食用油做潤滑油，廠房一塵不染。「我家環境比別人差，念職校畢業可以馬上賺錢。」一畢業就到螺絲廠任品檢員，3個月升課長，「我的學歷當時算高的，加上從不挑工作，別人做不好的，我通通撿起來做，用工作表現讓老闆、客戶注意到我。」看準螺絲大本營對模具的高度需求，1991年，李碧青靠著標會加上父母向親友借貸，勉強湊100萬元創業，「機器都是分期付款，我每天做到晚上12點，1個人顧3台機器。」校長兼撞鐘緊盯品質，讓不少螺絲大廠樂於和他合作。全球六角螺絲龍頭芳生螺絲的總廠長農湘義表示：「鴻君的開發能力強，遇急件會全力配合趕工，所以雙方合作超過25年。」李碧青的努力，也讓螺絲廠董事長願意提攜他，「早年春雨集團的創辦人李董事長對我特別好，每次他要去國外參訪，都會帶我一起，我就在旁邊惦惦聽、偷偷學。有事沒事老董就叫司機載他到我工廠泡茶聊天，從不事先約好，都說是要抽查我有沒有認真工作。」借助螺絲大廠的人脈與資源，讓鴻君模具訂單源源不絕。鴻君模具是高雄岡山地區老牌模具加工廠，因交貨期準、品質服務有口碑，不少螺絲大廠都指名合作。樂觀豪爽加上愛交朋友，李碧青一路走來貴人運不斷。事業穩定後，他重返母校攻讀碩、博士，「我是缺什麼就去補什麼，學校是人脈的集中營，說實在讀書也是交朋友，交朋友也是在工作，同學、教授都是寶藏，我這邊學一點、那邊學一點，受益無窮。」2004年政府推動螺絲產業升級，在模具產業深耕十餘年的李碧青坦言：「我確實曾思考，如果未來要繼續擴廠，等於把雞蛋都放在同一個籃子，產業過度集中相對風險也高，但要做其他產業，我又沒門路。」沒想到隔年一場演講，意外替他開啟另外一扇窗。跨界錢坑對不起老婆「聽完演講，隔天教授就跑來找我，問我要不要做人工牙根？當時台灣還沒人做，我一看，簡直就是螺絲的翻版，這不就是我最熟悉的東西，財神爺都送上門了，能不做嗎？」分據產學界的二人一拍即合，為申請進駐路科，半年來回數十趟文件送審，最後連主管單位南科管理局科長也跳下來幫忙，協助取得蓋廠許可，2006年牙材團隊成軍，2年後正式進駐路科設廠。所謂人工牙根是以醫療級鈦金屬製成，透過手術植入齒槽骨，待骨整合後再安裝牙冠，滿足患者咀嚼及美觀需求。以往，台灣人工牙根市場多是歐美品牌的天下，瑞典Nobel Biocare、瑞士Staumann、美國Dentsply、Biomet與Zimmer全球前五大品牌，囊括逾60％市占，近年韓國品牌在其政府5年補助138億元的政策性支持下，強勢崛起。因牙根單價高，吸引不少台灣螺絲大廠加入開發行列，全盛時達40家，但隔行如隔山，不到10年陸續退出，只剩鴻君科技、京達與全球安聯3家。李碧青從傳產轉型跨入醫材，硬體廠房砸錢就能到位，但要徹底搞懂技術，他不惜到台北的牙科診所當「學徒」，「晚上10點牙科診所打烊後，牙醫師幫我特訓2、3個小時，下課已是半夜，沒高鐵可搭，我就搭客運4個半小時一路睡到岡山，下車剛好天亮，洗把臉直接去上班。」相關人才需土法煉鋼、自行培訓，對急性子的李碧青來說也是一種修煉。「有時找來的人方向錯誤，光設計就花半年，發現有問題全部報銷，幾千萬投資泡湯，時間又被耽誤。」4年研發期已燒掉2億元，模具廠獲利形同左手進右手出，全投入牙材事業，讓李碧青對在模具廠擔任業務、辛苦接單的太太感到抱歉，「她本來想說快要可以退休，結果好好的日子被我搞了這麼大一個錢坑。」李碧青（中）是高雄應用科技大學模具科班畢業，妻子林星延（左）則是模具廠唯一的業務人員。親測成效甘當白老鼠不放棄任何觀摩學習機會，即使還在研發階段，李碧青就積極參展，有次在越南展場上遇到一位國際植牙學會講師，2人相談甚歡，「他當場在餐廳用餐巾紙，畫了一根人工牙根圖送我，叫我按圖再試一次。」回國後他請研發團隊重新調整，成為第一根Ti-ONE101產品雛形，2010年取得認證。目前歐美等進口人工牙根要價1.5萬元至2萬元，鴻君牙根定價8,000至1萬元，不僅價格便宜近5成，植體表面還以特殊噴砂加酸蝕專利處理，提高植體與骨頭接觸的表面積，「植體種下去後，原本骨整合可能要花半年，現在可縮短到3個月，骨質條件好一點的人，甚至只要2個月。」李碧青把自己當白老鼠，陸續植了9顆牙，實際感受使用效果。看似有競爭優勢，但臨床上有牙醫師認為：「比起歐美大廠累積4、50年歷史，台灣人工牙根上市時間短，缺乏長時間臨床數據佐證，基於保險起見，我不會輕易更換，何況每家廠牌的器械鑽頭都不一樣，要整套換掉也是成本，還有操作熟悉度問題。」要讓牙醫師在植牙過程中操作更順手，器械輔具也很重要。圖為鴻君自行開發手術套件。儘管困難重重，但李碧青不氣餒，他總是鼓勵研發團隊：「一定要有好的產品去誘惑醫師，除了牙材，周邊器械輔具也要一併改善，否則如何讓他們正眼看你？」初期，李碧青只管生產，產品則交由經銷商推廣，但牙醫界就像武林，有少林、武當門派，「有的醫師喜歡、也有醫師怎麼用都不習慣，我曾因太過在乎，聽到醫師嫌刀具太銳利，怕不小心會切到神經，嚇得馬上回來改，哪知是這只是少數醫師的看法，反而流失原本7成的接受度。」二子助陣不靠經銷商為更精準蒐集使用者意見，李碧青6年前要求2子加入行銷團隊，長子負責海外業務、次子負責國內推廣，2016年起國內市場不再由經銷商操盤。擔任市場行銷總監的長子林容翰表示：「業務不能只是銷售產品，在醫療與臨床專業知識上要很強，現在資訊這麼發達，遇到問題第一次不會，就查國內外臨床文獻，或向牙醫學會請教，唯有做到能幫牙醫師解答疑惑，才能讓他們越來越依賴你。」為了拓展台灣市占，李碧青在北中南舉辦學術研討會、植牙技術交流會，也開放牙醫師報名訪廠，盼取得更多牙醫師認同。李碧青（左）要求2子加入行銷團隊，長子林容翰（右）現擔任市場行銷總監。京湛牙醫診所院長周浩暉指出：「歐美品牌是以外國人做人體實驗，西方人與亞洲人的齒顎結構落差不小，以上顎後齒植牙為例，台灣患者常見牙床骨頭不足，植體從設計就必須調整，才能提高成功率，我看過鴻君的製程與工廠環境，不輸國外大廠。」為打開外銷市場，鴻君科技持續在海外參展。圖為德國科隆牙材展。（鴻君集團提供）聽聞周浩暉的評價，技術底出身、事事要求完美的李碧青，故作搞笑地搔搔耳朵稱：「國外品牌經銷商光要反映醫師意見到總部，都非常不容易，但我不一樣，牙醫界隨時找得到我，如果東西不好，一直在我耳邊唸唸唸，我哪裡受得了？」「人家說10年磨一劍，或許適用在傳產，但牙材要花2倍、3倍時間，我只是初段班，還要持續努力。」真金不怕火煉，李碧青堅信天助自助者，其餘則交給時間來證明。後記：黑手董仔下工變綠手指李碧青白天在2廠間奔波，下了班，還得挑燈夜戰寫博士論文，為準備論文口試犧牲睡眠，時間之於他，就像女人的乳溝，總是得擠了又擠，不知不覺走路快、開車快，連吃飯也是5分鐘解決。唯一可以讓急性子董仔放慢腳步的，恐怕只有模具廠旁的果園，夏天摘土芒果醃芒果青，冬天替芭樂套袋疏果，自栽水果送員工、客戶也成了他收買人心的甜蜜手段，黑手變身綠手指，獨樂樂不如眾樂樂。農家子弟出身的李碧青喜歡種果樹，模具廠旁的果園裡至少栽種10種以上果樹，每季都有當令水果可吃。★鏡週刊關心您：未滿18歲禁止飲酒，飲酒過量害人害己，酒後不開車，安全有保障。更新時間｜2019.12.29 15:45\n",
+      "\n",
+      "10\n",
+      "\n",
+      "0:00:01.823453@@tim@@獨家新聞，有毒后之稱的秀姊落網。在南港、汐止一帶販毒的陳政其，大家稱她毒后秀姊，她不僅把三個孩子訓練成組織裡的運毒成員，前後三個丈夫還為了她販毒頂罪入獄，若遇到成員黑吃黑，拿槍恐赫，還將人囚禁，行為誇張，被警方列為國內治安第七名女流氓，不過，她今（20）日因案出庭受訪說部分消息有誤，提出反駁。 拿毛巾遮著臉，還隱約看得出略帶霸氣的眼神，南港、汐止一帶，大家稱她秀姊，走在旁邊穿著紅色上衣，手銬在一起的男子是她的長子，後方則是她的外甥女，因為秀姊姓陳，警方戲稱這一家人，販毒家族。  這名秀姊因為吸毒、販毒多次進出法庭，她不僅把三個孩子訓練成組織裡的運毒成員，前後三個丈夫還為了她販毒，頂罪入獄，行徑相當誇張，20日又因為買賣毒品案件進出法庭，引起注意。 記者：「當初怎麼會想要去販毒？」   被告陳政其：「就是心情不好，離婚，跟朋友一起，一起吸毒開始。」   秀姊對於外界傳出的消息提出反駁。   被告陳政其：「沒有，沒有，三個孩子都沒有運毒，他們都完全沒有涉入，所說的三個丈夫替我扛罪，都沒有這一回事，也沒有替我頂罪入獄，所有罪都是我自己扛。」 這名毒后秀姊，今年57歲，十五歲時和丈夫生下孩子，夫妻倆迫於經濟壓力開始販毒，販毒生涯長達42年，警方提報她為治平對象，是國內治安史上第七名女流氓。 若遇到成員黑吃黑，暗槓毒款，還會拿槍恐赫，將人囚禁，向受害者家屬勒索，手法十分兇悍，現在還爆出現任男友以開計程車的方式掩護，幫忙運毒，風波不斷的秀姐因為毒品相關案件，頻頻躍上新聞版面，再度引起民眾討論。\n",
+      "\n",
+      "46\n",
+      "\n",
+      "0:00:01.875047@@tim@@〔記者陳政其／台北報導〕北檢偵辦富南斯集團涉嫌吸金30億元案，查出集團高階幹部包括藝人張彥廷的父親張耀貴，而另名高階幹部陳怡岑更坐擁瑪莎拉蒂跑車，展開大規模搜索約談後，依違反銀行法將張耀貴等10人向台北地院聲押禁見獲准；張耀貴等5人不服，提起抗告，高等法院認定張耀貴等5人所犯最輕本刑是七年以上重罪，且犯嫌重大，也和未到案的共犯、證人有串證、湮滅證據之虞，有羈押禁見的必要，今駁回張等5人抗告案，全案確定。  檢調查出，富南斯集團以舉辦投資說明會方式，假借代操美股及投資虛擬貨幣招攬民眾出資，強調每個月可拿回本金和獲利共16%，只要一年就可以回本，藉此吸金至少30億元，約2000人上當受騙。 張耀貴與陳怡岑等人都屬集團高階幹部，負責招攬民眾聽說明會，據了解，方男平日出手闊綽且開瑪莎拉蒂跑車代步，但他到案後否認吸金，強調自己和其他幹部也有投資5、600萬元；另名高階幹部林秀琦也稱，都有告知投資人「投資有賺有賠」。  檢方考量還有共犯未到案，以陳怡岑、張耀貴等10名核心幹部犯嫌重大且有串證之虞，向法院聲請羈押禁見獲准，李吉凱等其餘7名共犯各以20萬元到5萬元交保。  張耀貴、林秀琦、李進寶、張雅婷和鄭馥恆等5人不服被裁定羈押禁見，向高等法院提起抗告。  高院今以三大理由，駁回張5人抗告案，高院指出，張等5人觸犯銀行法第125條第1項後段之罪，其犯罪金額達新臺幣一億元以上，為七年以上徒刑的重罪，且犯罪嫌重大，且本案犯罪集團規模龐大，多名被告尚未到案，張等5人和共犯、證人串證可能性甚高，加上此案影響我國金融秩序甚鉅，共犯間分工、犯罪情節都有待檢察官偵查，均有羈押禁見必要。\n",
+      "\n",
+      "303\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "df = pd.read_excel('day2.xlsx')\n",
+    "for i, s in enumerate(df['News']):\n",
+    "    if  '陳政其' in s:\n",
+    "        print(s)\n",
+    "        print(i)"
    ]
   }
  ],
